--- a/python_class/ooppss.ipynb
+++ b/python_class/ooppss.ipynb
@@ -123,6 +123,52 @@
     "print(demo.__doc__)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "25fe58ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def romn(s):\n",
+    "    rmn={\n",
+    "        'i':1,\n",
+    "        'v':5,\n",
+    "        'x':10,\n",
+    "        'l':50,\n",
+    "        'c':100\n",
+    "        \n",
+    "    }\n",
+    "    tl=0\n",
+    "    pr=0\n",
+    "    for i in reversed(s):\n",
+    "        valu=rmn[i]\n",
+    "        if valu<pr:\n",
+    "            tl-=valu\n",
+    "        else:\n",
+    "            tl+=valu\n",
+    "        pr=valu\n",
+    "    return tl\n",
+    "\n",
+    "print(romn('iv'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f044ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
