--- a/python_class/sixth.ipynb
+++ b/python_class/sixth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "277bbe40",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     "for i in range(5):\n",
     "    if i%2==0:\n",
     "        b.append(i)\n",
-    "print(b).\n"
+    "print(b)\n"
    ]
   },
   {
@@ -1058,6 +1058,61 @@
     "input_date = \"2025 04 07\"\n",
     "\n",
     "print(con(input_date))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4c252c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Aditya Gupta, Age: 36, Phone: +91 7397215123, Email: aditya.gupta@outlook.com\n",
+      "Name: Aarav Gupta, Age: 52, Phone: +91 6732432746, Email: aarav.gupta@hotmail.com\n",
+      "Name: Aarav Sharma, Age: 39, Phone: +91 9302491521, Email: aarav.sharma@outlook.com\n",
+      "Name: Vivaan Singh, Age: 47, Phone: +91 6596963972, Email: vivaan.singh@hotmail.com\n",
+      "Name: Aditya Rao, Age: 44, Phone: +91 8714181006, Email: aditya.rao@yahoo.com\n",
+      "Name: Aarav Patel, Age: 29, Phone: +91 9975563084, Email: aarav.patel@hotmail.com\n",
+      "Name: Vivaan Nair, Age: 59, Phone: +91 9843667460, Email: vivaan.nair@hotmail.com\n",
+      "Name: Ananya Rao, Age: 23, Phone: +91 8585510471, Email: ananya.rao@outlook.com\n",
+      "Name: Arjun Singh, Age: 35, Phone: +91 8479701994, Email: arjun.singh@yahoo.com\n",
+      "Name: Vivaan Das, Age: 32, Phone: +91 9048045100, Email: vivaan.das@yahoo.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "# Sample data for names\n",
+    "first_names = [\"Aarav\", \"Vivaan\", \"Aditya\", \"Vihaan\", \"Arjun\", \"Sai\", \"Ananya\", \"Diya\", \"Ishita\", \"Meera\"]\n",
+    "last_names = [\"Sharma\", \"Verma\", \"Reddy\", \"Nair\", \"Patel\", \"Gupta\", \"Kumar\", \"Singh\", \"Das\", \"Rao\"]\n",
+    "\n",
+    "# Function to generate a random phone number\n",
+    "def generate_phone_number():\n",
+    "    return f\"+91 {random.randint(6000000000, 9999999999)}\"\n",
+    "\n",
+    "# Function to generate a random email based on name\n",
+    "def generate_email(first_name, last_name):\n",
+    "    domains = [\"gmail.com\", \"yahoo.com\", \"outlook.com\", \"hotmail.com\"]\n",
+    "    return f\"{first_name.lower()}.{last_name.lower()}@{random.choice(domains)}\"\n",
+    "\n",
+    "# Function to generate random age\n",
+    "def generate_age():\n",
+    "    return random.randint(18, 60)\n",
+    "\n",
+    "# Generate 10 random entries\n",
+    "for _ in range(10):\n",
+    "    first_name = random.choice(first_names)\n",
+    "    last_name = random.choice(last_names)\n",
+    "    age = generate_age()\n",
+    "    phone_number = generate_phone_number()\n",
+    "    email = generate_email(first_name, last_name)\n",
+    "    \n",
+    "    print(f\"Name: {first_name} {last_name}, Age: {age}, Phone: {phone_number}, Email: {email}\")\n"
    ]
   }
  ],
