--- a/python_class/task12345.ipynb
+++ b/python_class/task12345.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "08065ea4",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file not found\n"
+      "Counter({'sa': 2, 'as': 1, 'dsvds': 1, 'gdsg': 1, 'dsg': 1, 'asas': 1, 'asassas': 1, 'asassassa': 1, 's': 1, 'asassassas': 1, 'asassassaa': 1})\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 99,
    "id": "34aff335",
    "metadata": {},
    "outputs": [
@@ -284,15 +284,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'f': 6, 'g': 7, 'h': 8, 'i': 9, 'j': 10}\n"
+      "{'b': 2, 'j': 10, 'g': 7, 'a': 1, 'e': 5}\n"
      ]
     }
    ],
    "source": [
-    "alphabet_positions = {chr(i): i - 96 for i in range(97, 107)}\n",
     "\n",
-    "# Print the dictionary\n",
-    "print(alphabet_positions)"
+    "l={'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'f': 6, 'g': 7, 'h': 8, 'i': 9, 'j': 10}\n",
+    "inp=['b','j','t','g','b','a','e']\n",
+    "ke=l.keys()\n",
+    "res={}\n",
+    "def chek(l,inp):\n",
+    "    for i in range(len(inp)):\n",
+    "        if inp[i] in ke:\n",
+    "            res.setdefault(inp[i],l[inp[i]])\n",
+    "    return res\n",
+    "r = chek(l,inp)\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff142c57",
+   "metadata": {},
+   "source": [
+    "# 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0e9fb9c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines =  9\n",
+      "word =  12\n",
+      "chractor =  71\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "\n",
+    "    with open(\"demo.txt\",'r')as f:\n",
+    "        r=f.readlines()\n",
+    "        cntline=len(r)\n",
+    "        word_cnt=sum(len(i.split()) for i in r)\n",
+    "        chr_cnt= sum(len(i) for i in r)\n",
+    "\n",
+    "        print(\"lines = \",cntline)\n",
+    "        print(\"word = \",word_cnt)\n",
+    "        print(\"chractor = \",chr_cnt)\n",
+    "        \n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Unreadable\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -305,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "id": "23f567a1",
    "metadata": {},
    "outputs": [
@@ -313,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['support@example.com', 'sales@example.co.in']\n"
+      "['abc@gmail.com']\n"
      ]
     }
    ],
